# TRELLIS-enhanced

./: INSTALLATION_COMPLETE.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  app.py  pyproject.toml  requirements.txt  run.py  setup.bat  setup.sh  test_setup.py
.claude/: settings.local.json
extensions/nvdiffrast/nvdiffrast.egg-info/: PKG-INFO  SOURCES.txt
tmp/c14vzh1j5p5/: sample.glb
tmp/zr5ogvhg8yq/: sample.glb
trellis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
trellis/renderers/: gaussian_render.py
trellis/utils/: postprocessing_utils.py
